[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/guns/knife/slash1.png" type="Texture" id=1]
[ext_resource path="res://assets/guns/knife/slash4.png" type="Texture" id=2]
[ext_resource path="res://assets/guns/knife/slash3.png" type="Texture" id=3]
[ext_resource path="res://assets/guns/knife/slash2.png" type="Texture" id=4]
[ext_resource path="res://bosses/boss_slash.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "disappear",
"speed": 24.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="BossSlash" type="Node2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.760784, 1, 0.92549, 1 )
frames = SubResource( 1 )
animation = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -8, -20, 0, -12, 5, 0, 0, 12, -8, 20, 1, 20, 12, 0, 1, -20 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
